<resources>
    <string name="app_name">GlobeOne</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_next">Next</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_add">Add</string>
    <string name="button_subscribe">Subscribe</string>
    <string name="button_buy_load">Buy load</string>
    <string name="rationale_button_allow">Allow</string>
    <string name="rationale_button_deny">Deny</string>
    <string name="got_it">Got it</string>
    <string name="pay">Pay</string>
    <string name="pull_to_refresh">Pull down and release to refresh</string>
    <string name="template_fraction"> %1$s/%2$s</string>
    <string name="reload_page">Reload page</string>
    <string name="token_expired_title">Your session ended.</string>
    <string name="token_expired_description">Please log in again to continue using GlobeOne.</string>
    <string name="token_url">https://ciamapi.globe.com.ph/cao/v1/native-redirection</string>
    <string name="menu_home">Home</string>
    <string name="menu_help">Help</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_rewrds">Rewards</string>
    <string name="account_details_account_number">Acct. No.</string>
    <string name="account_details_view_details">View details</string>
    <string name="account_details_data_tab">Data</string>
    <string name="account_details_content_tab">Content</string>
    <string name="account_details_calls_tab">Calls</string>
    <string name="account_details_text_tab">Text</string>
    <string name="account_details_calls_and_text_tab">Calls &amp; Text</string>
    <string name="account_details_try_these_out">Try these out!</string>
    <string name="account_details_subscribe_again">Subscribe again</string>
    <string name="account_details_shop_promos">Shop promos</string>
    <string name="account_details_consumption_calls">%1$d / %2$d mins</string>
    <string name="account_details_consumption_calls_left">Calls left</string>
    <string name="account_details_consumption_calls_unli">Unli calls</string>
    <string name="account_details_consumption_texts">%1$d / %2$d texts</string>
    <string name="account_details_consumption_texts_left">Texts left</string>
    <string name="account_details_consumption_texts_unli">Unli texts</string>
    <string name="account_details_network_type_all">All networks</string>
    <string name="account_details_network_type_other">Other networks</string>
    <string name="account_details_network_type_globe_tm">Globe/TM</string>
    <string name="account_details_content_not_activated">Not activated</string>
    <string name="account_details_content_partner_apps_title">“Where’s my subscription?”</string>
    <string name="account_details_content_partner_apps_description">If you subscribed to the following, you can check their status in their respective apps.</string>
    <string name="account_details_inactive_header_title">This account is already inactive</string>
    <string name="account_details_inactive_header_description">This account is no longer with us.</string>
    <string name="account_details_postpaid_broadband_title">Something wonderful is coming!</string>
    <string name="account_details_postpaid_broadband_description">More Postpaid Broadband features are coming to New GlobeOne soon!</string>
    <string name="content_promo_unsubscribe">Unsubscribe</string>
    <string name="content_promo_unsubscribe_dialog_title">Are you sure you want to unsubscribe to %s?</string>
    <string name="content_promo_unsubscribe_dialog_description">This promo is non-refundable.</string>
    <string name="get_a_freebie">Get a freebie!</string>
    <string name="get_a_freebie_description">Subscribe to GoSURF50 and get a freebie! Promo runs until March 31, 2021. Learn more here.</string>
    <string name="load_balance">Load balance</string>
    <string name="balance_placeholder">-- --</string>
    <string name="balance_zero_decimal">0.00</string>
    <string name="acct_no">Acct. No.</string>
    <string name="gcash_balance">GCash balance</string>
    <string name="gcash_link">Link now</string>
    <string name="loan_balance">Loan balance</string>
    <string name="load_to_pay_balance">Load to pay balance</string>
    <string name="shop_now">Shop now</string>
    <string name="your_subscriptions">Your subscriptions</string>
    <string name="no_subscriptions">No subscriptions yet!</string>
    <string name="your_plan_usage">Your plan usage</string>
    <string name="unlimited_data_bucket_description">You may experience changes in\ninternet speed to the Fair Use Policy</string>
    <string name="enjoy_your_surfing">Enjoy your surfing!</string>
    <string name="data_usage">%1$d%2$s/%3$d%4$s</string>
    <string name="member_data_usage">%1$s / %2$s</string>
    <string name="rewards_expires_on">%1$s pts expires on %2$s</string>
    <string name="load_expires_on">P%1$s expires on %2$s</string>
    <string name="name">Name</string>
    <string name="managing_for_someone">I am managing this account for someone else.</string>
    <string name="managing_different_accounts">Managing different accounts</string>
    <string name="btn_save_changes">Save changes</string>
    <string name="btn_remove_this_account">Remove this account</string>
    <string name="account_remove_description">You may remove this account.</string>
    <string name="account_removal_rationale_title">Are you sure you want to remove this account?</string>
    <string name="account_removal_rationale_description">You can add it back anytime.</string>
    <string name="account_removal_inactive_description">You can no longer add this again since it’s already inactive.</string>
    <string name="activate_now">Activate now</string>
    <string name="activate">Activate</string>
    <string name="choose_freebie">Choose freebie</string>
    <string name="claim_freebie">Claim freebie</string>
    <string name="view_offers">View offers</string>
    <string name="sit_tight">Sit tight!</string>
    <string name="this_will_only_take_a_moment">This will only take a moment.</string>
    <string name="your_freebie_is_on_the_way_please_wait_for_it_to_reflect_on_your_account">Your freebie is on the way. Please wait for it to reflect on your account.</string>
    <string name="we_re_now_processing_your_freebie">We’re now processing your freebie!</string>
    <string name="exclusive_promos">Exclusive Promos</string>
    <string name="exclusive_sulit_promos">Exclusive sulit promos</string>
    <string name="choose_your_free_app_data">Choose your free app data!</string>
    <string name="choose_a_freebie">Choose a freebie</string>
    <string name="app_included">App included</string>
    <string name="weve_got_exclusive_promos_for_you">We’ve got exclusive promos for you!</string>
    <string name="bhie_may_regalo_kami_para_sayo"><![CDATA[Bhie, may regalo kami para sa’yo! <3]]></string>
    <string name="pocket">Pocket</string>
    <string name="view_pocket_account">View pocket</string>
    <string name="activity">View history</string>
    <string name="account_details_bill_status_due_soon">DUE SOON</string>
    <string name="account_details_bill_status_overdue">OVERDUE</string>
    <string name="account_details_bill_amount_due">Bill amount due</string>
    <string name="account_details_template_bill_time_span">%1$s to %2$s</string>
    <string name="account_details_template_bill_due_on">Due on %1$s</string>
    <string name="account_details_template_bill_due_last">Due last %1$s</string>
    <string name="account_details_bill_calls">Calls</string>
    <string name="account_details_bill_texts">Texts</string>
    <string name="account_details_bill_data">Data</string>
    <string name="account_details_bill_value_added_services">Value added services</string>
    <string name="account_details_bill_others">Others</string>
    <string name="account_details_bill_excess_charges">Excess charges</string>
    <string name="account_details_bill_device_cashout">Device cashout</string>
    <string name="account_details_bill_pay_now">Pay now</string>
    <string name="account_details_bill_pay_in_advance">Pay in advance</string>
    <string name="account_details_bill_missed_payment_title">You missed your payment!</string>
    <string name="account_details_bill_missed_payment_description_connected_state">You’re already past the due date. Please pay right away to avoid temporary disconnection.</string>
    <string name="account_details_bill_missed_payment_description_disconnected_state">You’re already past the due date. Please pay right away to get reconnected.</string>
    <string name="account_details_bill_missed_payment_warning_connected_state">You’re already past the due date. Pay before you get disconnected.</string>
    <string name="account_details_bill_missed_payment_warning_disconnected_state">You’re already past the due date. Pay to get reconnected.</string>
    <string name="account_details_bill_you_are_all_set_for_this_month">You’re all set for this month!</string>
    <string name="account_details_bill_all_set_description">You will receive your next billing statement after your cut-off.</string>
    <string name="account_details_bill_you_paid_in_excess">You paid in excess</string>
    <string name="account_details_bill_view_pdf_bill">View PDF Bill</string>
    <string name="account_details_bill_excess_payment">Excess payment</string>
    <string name="account_details_bill_previous_amount_to_pay">Previous amount to pay</string>
    <string name="account_details_bill_download_bill_pdf">Download PDF Bill</string>
    <string name="account_plan_details_title_plan_details">Plan details</string>
    <string name="account_plan_details_label_plan">Plan</string>
    <string name="account_plan_details_label_internet_speed">Internet speed</string>
    <string name="account_plan_details_label_cutoff_date">Cut-off date</string>
    <string name="account_plan_details_description_cutoff_date">The cut-off date is the last day of your billing cycle.</string>
    <string name="account_plan_details_label_bill_due_date">Bill due date</string>
    <string name="account_plan_details_spending_limit">Spending limit</string>
    <string name="account_plan_details_spending_limit_description">The spending limit is the maximum amount that you can spend for extra services or products on top of your monthly plan so you can stay within or near your ideal plan budget.</string>
    <string name="account_plan_details_label_contract_ending_date">Contract end date</string>
    <string name="account_plan_details_title_personal_information">Personal Information</string>
    <string name="account_plan_details_label_name">Name</string>
    <string name="account_plan_details_label_birthday">Birthday</string>
    <string name="account_plan_details_label_email">Email</string>
    <string name="account_plan_details_description_email">We send your billing statements and official receipts to this email.</string>
    <string name="account_plan_details_title_address">Address</string>
    <string name="account_plan_details_label_address">Billing address</string>
    <string name="shop_tab_load">Load</string>
    <string name="shop_tab_promos">Promos</string>
    <string name="shop_tab_borrow">Borrow</string>
    <string name="shop_tab_content">Content</string>
    <string name="data">DATA</string>
    <string name="text">TEXTS</string>
    <string name="call">CALLS</string>
    <string name="no_calls_subs">You have no calls subscriptions.</string>
    <string name="no_text_subs">You have no text subscriptions.</string>
    <string name="no_data_subs">You have no data subscriptions.</string>
    <string name="learn_more">Learn more</string>
    <string name="wayfinder_get_started">GET STARTED</string>
    <string name="dac_mock_promo">Home surf 200</string>
    <string name="mock_two_decimal_amount">P200.00</string>
</resources>