<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021 LotusFlare
  ~ All Rights Reserved.
  ~ Unauthorized copying and distribution of this file, via any medium is strictly prohibited.
  -->

<ph.com.globe.globeonesuperapp.utils.ui.RefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/srl_shop"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?accentLight"
        android:theme="@style/ThemeOverlay.App.SkyBlue">

        <ph.com.globe.globeonesuperapp.utils.ui.Wayfinder
            android:id="@+id/wf_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:label="@string/wayfinder_get_started"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_shop"
            style="@style/Widget.App.TabLayout.Prominent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wf_shop"
            app:tabIndicatorFullWidth="false">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_tab_promos" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_tab_load" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_tab_borrow" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_tab_content" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_shop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_shop" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ph.com.globe.globeonesuperapp.utils.ui.RefreshLayout>
